hosts に ansible_user をセットする

--- a/roles/inventory/templates/hosts.j2
+++ b/roles/inventory/templates/hosts.j2
@@ -18,9 +18,9 @@
         {%- elif (h.ssh_pass and h.ssh_pass != '') %}
             {{- h.host_name }} ansible_user={{ h.ssh_user }} ansible_password={{ h.ssh_pass }}
         {%- elif (h.become_pass and h.become_pass != '') %}
-            {{- h.host_name }} ansible_user={{ h.ssh_user }} ansible_password={{ h.become_pass }}
+            {{- h.host_name }} ansible_user={{ h.ssh_user }} ansible_become_password={{ h.become_pass }}
         {%- else %}
-            {{- h.host_name }}
+            {{- h.host_name }} ansible_user={{ h.ssh_user }}
         {%- endif %}
         {{-'\n'-}}
     {%- endif %}
